crates/reinhardt-pages/tests/ui/style/fail/undeclared_reference.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! {
	.card {
		color: vars.missing;
	}
};
fn main() {}
